add heading and paragaf

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-    
 </head>
 <body>
+    <h1>Shahbaz Ansari</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, nulla vitae. Omnis dolor doloribus voluptates!</p>
     <script src="js/script.js"></script>
 </body>
 </html>
